--- a/coding/templates/coding/base.html
+++ b/coding/templates/coding/base.html
@@ -22,7 +22,7 @@
     <head>        
         {% block head_block %}
         {% endblock %}
-        <title>Coding Sky - {% block title_block %}Coding Game For Beginners{% endblock %}</title>
+        <title>{% block title_block %}{% endblock %} | Coding Sky - Coding Game For Beginners</title>
 
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="title" content="Coding Sky">
