--- a/coding/templates/coding/question.html
+++ b/coding/templates/coding/question.html
@@ -1,6 +1,6 @@
 {% extends 'coding/base.html' %}
 {% load i18n%}
-
+{% block title_block %}{% trans "Quiz" %}{% endblock %}
 
 {% block body_block %}
 <div class="row">
