--- a/coding/templates/coding/progress.html
+++ b/coding/templates/coding/progress.html
@@ -3,84 +3,86 @@
 
 {% load quiz_tags %}
 
-{% block title %} {% trans "Progress Page" %} {% endblock %}
+{% block title_block %} {% trans "Records" %} {% endblock %}
 {% block description %} {% trans "User Progress Page" %} {% endblock %}
 
 {% block body_block %}
+{% if cat_scores %}
+<div class="row">
+    <div class="col-12">
+        <div class="card bg-primary shadow-soft border-light mb-5">
+            <div class="card-header pb-0">
+				<h2>{% trans "Question Category Scores" %}</h2>
+			</div>
 
-  {% if cat_scores %}
+			<div class="card-body pt-2 px-0 px-lg-4">
+				<table class="table table-hover shadow-inset rounded">
+					<thead>
+					  <tr>
+						<th>{% trans "Category" %}</th>
+						<th>{% trans "Correctly answererd" %}</th>
+						<th>{% trans "Total number" %}</th>
+						<th>%</th>
+					  </tr>
+					</thead>
+				
+					<tbody>
+					  {% for cat, value in cat_scores.items %}
+					  <tr>
+						<td>{{ cat }}</td>
+						<td>{{ value.0 }}</td>
+						<td>{{ value.1 }}</td>
+						<td>{{ value.2 }}</td>
+					  </tr>
+					  {% endfor %}
+					</tbody>				
+				</table>
+			</div>
+		</div>
+	</div>
+</div>
+{% endif %}
 
-  <h1>{% trans "Question Category Scores" %}</h1>
+{% if exams %}
+<div class="row">
+    <div class="col-12">
+        <div class="card bg-primary shadow-soft border-light mb-5">
+            <div class="card-header pb-0">
+				<h2>{% trans "Previous exam papers" %}</h2>
+				<h2 class="h5 mb-4">{% trans "Below are the results of exams that you have sat." %}</h2>
+			</div>
 
-  <table class="table table-bordered table-striped">
+			<div class="card-body pt-2 px-0 px-lg-4">
+				<table class="table table-hover shadow-inset rounded">
+					<thead>
+					  <tr>
+						<th>{% trans "Quiz Title" %}</th>
+						<th>{% trans "Score" %}</th>
+						<th>{% trans "Possible Score" %}</th>
+						<th>%</th>
+					  </tr>
+					</thead>
+				
+					<tbody>
+					  {% for exam in exams %}
+					  <tr>
+						<td>{{ exam.quiz.title }}</td>
+						<td>{{ exam.current_score }}</td>
+						<td>{{ exam.get_max_score }}</td>
+						<td>{{ exam.get_percent_correct }}</td>
+					  </tr>
+					  {% endfor %}
+					</tbody>
+				</table>
+			</div>
+		</div>
+	</div>
+</div>
+{% endif %}
 
-	<thead>
-	  <tr>
-		<th>{% trans "Category" %}</th>
-		<th>{% trans "Correctly answererd" %}</th>
-		<th>{% trans "Total number" %}</th>
-		<th>%</th>
-	  </tr>
-	</thead>
-
-	<tbody>
-
-
-	  {% for cat, value in cat_scores.items %}
-	  <tr>
-		<td>{{ cat }}</td>
-		<td>{{ value.0 }}</td>
-		<td>{{ value.1 }}</td>
-		<td>{{ value.2 }}</td>
-	  </tr>
-
-	  {% endfor %}
-
-	</tbody>
-
-  </table>
-
-
-  {% endif %}
-
-  {% if exams %}
-
-  <hr>
-
-  <h1>{% trans "Previous exam papers" %}</h1>
-  <p class="lead">
-	{% trans "Below are the results of exams that you have sat." %}
-  </p>
-
-  <table class="table table-bordered table-striped">
-
-	<thead>
-	  <tr>
-		<th>{% trans "Quiz Title" %}</th>
-		<th>{% trans "Score" %}</th>
-		<th>{% trans "Possible Score" %}</th>
-		<th>%</th>
-	  </tr>
-	</thead>
-
-	<tbody>
-
-	  {% for exam in exams %}
-
-	  <tr>
-		<td>{{ exam.quiz.title }}</td>
-		<td>{{ exam.current_score }}</td>
-		<td>{{ exam.get_max_score }}</td>
-		<td>{{ exam.get_percent_correct }}</td>
-	  </tr>
-
-	  {% endfor %}
-
-	</tbody>
-
-  </table>
-
-  {% endif %}
-
-
+<a href="{% url 'coding:quiz_index' %}" class="btn btn-primary btn-block mt-1 mb-5 animate-down-2" type="button" style="color: #F5B759;">
+	<span class="mr-2"><span class="fas fa-arrow-left"></span></span>
+	Back To Quiz Page
+  </a>
+  
 {% endblock %}
