--- a/coding/templates/coding/sitting_detail.html
+++ b/coding/templates/coding/sitting_detail.html
@@ -1,7 +1,7 @@
 {% extends 'coding/base.html' %}
 {% load i18n %}
 {% load quiz_tags %}
-{% block title %}
+{% block title_block %}
 {% trans "Result of" %} {{ sitting.quiz.title }} {% trans "for" %} {{ sitting.user }}
 {% endblock %}
 
