--- a/coding/templates/coding/quiz_list.html
+++ b/coding/templates/coding/quiz_list.html
@@ -46,7 +46,7 @@
 				</table>
 
 			{% else %}
-				<div class="col-12 col-md-10">
+				<div class="col-12">
 					<div class="alert alert-danger shadow-inset" role="alert">
 						<span class="alert-inner--icon icon-lg">
 							<span class="fas fa-fire"></span>
